--- a/Example.html
+++ b/Example.html
@@ -1,7 +1,6 @@
 <!-- 
 // ** GitScript **
 // GitScript.Repo: creepy-octo-squeegee
-// GitScript.File: Example.html
 // ** GitScript **
 -->
 <!DOCTYPE html>
@@ -11,5 +10,6 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <div><p>Here is some further test</p></div>
   </body>
 </html>
